# cob_navigation

cob_navigation_config/cob3-1/: costmap_common_params.yaml  dwa_local_planner.yaml
cob_navigation_followme_global/: CMakeLists.txt  bgp_plugin.xml  package.xml
cob_navigation_followme_global/doc/: followme_navigation_scheme.dia
cob_navigation_followme_global/include/: cob_followme_global_planner.h
cob_navigation_followme_global/include/cob_navigation_followme_global/: cob_navigation_followme_global.h
cob_navigation_followme_global/launch/: test_planner_plugin.launch
cob_navigation_followme_global/src/: cob_followme_global_planner.cpp  cob_navigation_followme_global.cpp
cob_navigation_global/config/: global_costmap_params_followme.yaml
cob_navigation_global/launch/: 2dnav_ros_dwa.xml  2dnav_ros_followme.xml
cob_navigation_local/config/: global_costmap_params.yaml  local_costmap_params.yaml
cob_navigation_local/launch/: 2dnav_ros_dwa_followme.xml
test_move_base_action/: CMakeLists.txt  package.xml
test_move_base_action/scripts/: send_path.py
