<package>
    <name>cob_navigation_followme_global</name>
    <version>1.0.0</version>
    <description>

        Global planner designed to be used in "Follow Me" RoboCup@Home scenario. It periodically receives current position of the guide
from people tracking node, and plans a path to follow for the move_base node.

    </description>
    <author email="alexei.ozhigov@gmail.com">Alexey Ozhigov</author>
    <maintainer email="maintainers@email.abc">[vacant]</maintainer>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>

    <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export>

</package>


